--- a/login/login.html
+++ b/login/login.html
@@ -15,21 +15,21 @@
  <header>
     <div class="view video-container">
      <video autoplay muted loop height="100%" width="100%" > 
-     <source src="https://res.cloudinary.com/watonhacker/video/upload/v1616989115/tonhalle/tonhalletest_emax05.mp4" type="video/mp4" autoplay muted loop></video>
+     <source src="https://res.cloudinary.com/watonhacker/video/upload/v1616989115/tonhalle/tonhalletest_emax05.mp4" type="video/mp4" autoplay muted loop></video> <!--https://res.cloudinary.com/watonhacker/video/upload/v1616971766/tonhalle/test4_q2uhpx.mp4-->
       <div class="container">
        <div class="login-form">
          <div class="login">
            <div ><img class="logo" src="https://res.cloudinary.com/watonhacker/image/upload/v1616971486/tonhalle/1200px-Tonhalle-Orchester_Z%C3%BCrich_logo_owqpf8.png" alt=""></div>
            <h3>Willkommen</h3> 
          </div>
-        <!--  <form action=""> -->
+       <!--  <form action=""> -->
          <label for="username">Username</label><br>
-         <input type="text"><br>
+         <input type="text" placeholder="don.quijote"><br>
          <label for="password">Password</label><br>
-         <input type="password">
+         <input type="password" placeholder="••••••••">
          <br>
          <input class="loginbtn" type="submit" value="Login">
-        <!--  </form> <!-->
+        <!-- </form> -->
          <a class="forgot1" href="">Passwort vergessen?</a>
          <a class="forgot2" href="">Forgot password?</a>
        </div>
