--- a/login/login.html
+++ b/login/login.html
@@ -16,7 +16,8 @@
     <div class="view video-container">
      <video autoplay muted loop height="100%" width="100%" > 
      <source src="https://res.cloudinary.com/watonhacker/video/upload/v1616989115/tonhalle/tonhalletest_emax05.mp4" type="video/mp4" autoplay muted loop></video> 
-       <div class="login-form">
+       <div class="container">
+        <div class="login-form">
          <div class="login">
            <div ><img class="logo" src="https://res.cloudinary.com/watonhacker/image/upload/v1616971486/tonhalle/1200px-Tonhalle-Orchester_Z%C3%BCrich_logo_owqpf8.png" alt=""></div>
            <h3>Willkommen</h3> 
