modificacion inputs form

--- a/login/login.html
+++ b/login/login.html
@@ -22,14 +22,14 @@
            <div ><img class="logo" src="https://res.cloudinary.com/watonhacker/image/upload/v1616971486/tonhalle/1200px-Tonhalle-Orchester_Z%C3%BCrich_logo_owqpf8.png" alt=""></div>
            <h3>Willkommen</h3> 
          </div>
-       <!--  <form action=""> -->
-         <label for="username">Username</label><br>
-         <input type="text" placeholder="don.quijote"><br>
-         <label for="password">Password</label><br>
-         <input type="password" placeholder="••••••••">
+        <form class ="form"action="">
+
+         <input type="text" name="username" placeholder="Username">
+ 
+         <input type="password" name="password" placeholder="Password" >
          <br>
          <input class="loginbtn" type="submit" value="Login">
-        <!-- </form> -->
+        </form>
          <a class="forgot1" href="">Passwort vergessen?</a>
          <a class="forgot2" href="">Forgot password?</a>
        </div>
